<resources>
    <string name="app_name">Lesson10</string>
    <string name="family">Family</string>
    <string name="order">Order</string>
    <string name="genus">Genus</string>

    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="sugar">Sugar</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
</resources>