<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FruitDetailsActivity">

    <TextView
        android:id="@+id/fruitNameTextView"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/actionModeBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="name" />

    <TextView
        android:id="@+id/caloriesLabel"
        style="@style/label"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fruitNameTextView" />

    <TextView
        android:id="@+id/caloriesTextView"
        style="@style/nutritionValue"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fruitNameTextView"
        tools:text="calories" />

    <TextView
        android:id="@+id/fatLabel"
        style="@style/label"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caloriesLabel" />

    <TextView
        android:id="@+id/fatTextView"
        style="@style/nutritionValue"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caloriesLabel"
        tools:text="fat" />

    <TextView
        android:id="@+id/sugarLabel"
        style="@style/label"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatLabel" />

    <TextView
        android:id="@+id/sugarTextView"
        style="@style/nutritionValue"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatLabel"
        tools:text="sugar" />

    <TextView
        android:id="@+id/carbohydratesLabel"
        style="@style/label"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sugarLabel" />

    <TextView
        android:id="@+id/carbohydratesTextView"
        style="@style/nutritionValue"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sugarLabel"
        tools:text="carbohydrates" />

    <TextView
        android:id="@+id/proteinLabel"
        style="@style/label"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbohydratesLabel" />

    <TextView
        android:id="@+id/proteinTextView"
        style="@style/nutritionValue"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbohydratesLabel"
        tools:text="protein" />

</androidx.constraintlayout.widget.ConstraintLayout>